@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/elementary-icon-theme
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*elementary-icon-theme-2.6 (03 Jan 2011)
+
+  03 Jan 2011; A. Vinogradov <spamslepnoga@inbox.ru>
+  +elementary-icon-theme-2.6.ebuild:
+  bump, tnh. Thomas Arnhold
 
   25 Oct 2010; Rion <rion4ik@notagmail.com>
   -elementary-icon-theme-2.4.ebuild, +elementary-icon-theme-2.5.ebuild:
